--- a/config.development.json
+++ b/config.development.json
@@ -1,3 +1,14 @@
 {
-    "enableDeveloperExperiments": true
+   "enableDeveloperExperiments": true,
+   "database": {
+       "client": "mysql",
+       "connection": {
+           "host": "localhost",
+           "port": 3306,
+           "user": "tlcorp",
+           "password": "tlcorp",
+           "database": "knowledge-blog"
+       }
+    }
 }
+
